fix: error/success spacing

--- a/src/screens/admin/components/login/style.scss
+++ b/src/screens/admin/components/login/style.scss
@@ -77,7 +77,8 @@
 
             p {
                 font-weight: bold;
-                text-align: center;
+                text-align: left;
+                line-height: 20px;
             }
 
             #error {
